<resources>
    <string name="app_name">SmartIOS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="QRCODE" translatable="false">https://qrcode.tec-it.com/API/QRCode?data=%s&amp;errorcorrection=H&amp;backcolor=%%23ffffff</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="id_email">ID(Email)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="id_e_mail_address">[ID] E-mail address</string>
    <string name="h_p_phone_number">[H.P.] Phone Number</string>
    <string name="name">Name</string>
    <string name="clientcode">ClientCode</string>
    <string name="type">Type</string>
    <string name="language">Language</string>
    <string name="password_check">Password Check</string>
    <string name="cancel">Cancel</string>
    <string name="i_agree_to_terms">I agree to Terms</string>
    <string name="bluetooth_down_message">블루투스를 켜 주세요! 켜지 않으면 출입이 안 됩니다.</string>
    <string name="nochange">(변경 없음)</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="msg_token_fmt">Get Token %s</string>
</resources>