<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyFirstKotlin.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:touchscreenBlocksFocus="true"
            app:contentInsetStart="12dp"
            app:contentInsetStartWithNavigation="12dp"
            app:popupTheme="@style/Theme.MyFirstKotlin.PopupOverlay"
            app:titleMarginStart="0dp"
            app:titleTextColor="#FFFFFF">

            <ImageButton
                android:id="@+id/imageBtn"
                style="@android:style/Widget.ImageButton"
                android:layout_width="@dimen/HomeIconLength"
                android:layout_height="@dimen/HomeIconLength"
                android:background="?attr/colorPrimary"
                android:clickable="true"
                android:padding="0dp"
                android:scaleType="center"
                android:scaleX="@dimen/HomeIconscale"
                android:scaleY="@dimen/HomeIconscale"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_round_home_24" />


            <TextView
                android:id="@+id/toolbarText"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/TitleLeftMargin"
                android:text="@string/app_name" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView101"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/id_e_mail_address" />

                <EditText
                    android:id="@+id/editText101"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textViewhp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/h_p_phone_number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTexthp"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_weight="4"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/btnGethp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="GET"
                        android:visibility="gone" /> <!-- TODO : String Conversion -->
                </LinearLayout>

                <TextView
                    android:id="@+id/textView102"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/editText102"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView105"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/language" />

                        <Spinner
                            android:id="@+id/Sensor_spinner105"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:spinnerMode="dropdown"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/textView104"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/type" />

                        <Spinner
                            android:id="@+id/Sensor_spinner104"
                            android:layout_width="match_parent"
                            android:layout_height="44dp"
                            android:spinnerMode="dropdown"
                            android:textColor="@color/black" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView106"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/editText106"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/textView107"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/password_check" />

                <EditText
                    android:id="@+id/editText107"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:ems="10"
                    android:inputType="textPassword" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/oncancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/i_agree_to_terms"
        app:layout_constraintBottom_toTopOf="@+id/loginbtn"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>